esp/data/css.css
body {
  margin:0px;
  color: #434343;
  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 22px;
  line-height: 1.1;
}
.container {
  margin: 0 auto;
  max-width: 400px;
}
form .field-group {
  box-sizing: border-box;
  clear: both;
  padding: 10px 0;
  position: relative;
  margin: 1px 0;
  width: 100%;
}
form .field-group > label {
  color: #a5acb2;
  display: block;
  margin: 0 0 5px 0;
  position: relative;
  word-wrap: break-word;
}
select[type=text], input[type=text] {
  background: #fff;
  border: 1px solid #d0d0d0;
  border-radius: 2px;
  box-sizing: border-box;
  color: #434343;
  font-family: inherit;
  font-size: 1.1em;
  height: 2.2em;
  padding: 4px 5px;
  margin: 0;
  width: 100%;
}
input[type=text]:focus {
  border-color: #4C669F;
  outline: 0;
}

#appstatus{
  margin-right: 10px;
}
.statuswrapper{
  text-align: right;
}
#logo{
  margin-top: 10px;
  margin-bottom: 10px;
  height: 80px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}
#feedback{
  margin-top: 10px;
}

.btn{
  border: 1px solid #bdbdbd;
  border-radius: 2px;
  /*
  color: #434343;
  background: #f5f5f5;
  */
  color: white;
  background-color: #065063;
  cursor: pointer;
  font-size: 22px;
  font-variant: normal;
  font-weight: 400;
  height: 2.5em;
  margin: 0;
  padding: 4px 10px;
  text-decoration: none;
}

.btn-blue{
  background-color: #38cef3;
  color: white;
}

.center{
  text-align: center;
}
.content{
  padding: 70px 5px 20px;
}
.font70{
  font-size: 70%;
}
.font80{
  font-size: 80%;
}
.btn-grey{
  background: #C8E6ED;
  color: #8db2ba;
}
.monospace{
  font-family: 'monospace';
}
.mt0{
  margin-top: 0px;
}
.p10{
  padding: 10px;
}
.text-right{
  text-align: right;
}
.topnav{
  color:white;
  background-color: #065063;
  min-height:50px;
  position: fixed;
  width: 100%;
  top:0;
  bottom:auto;
}
.topnav a:visited{
  color:white;
}

#toplogo{
  position: relative;
  left: 7px;
  top: 7px;
}
.topnav p{
  margin-left:5px;
  line-height: 24px;
  display: inline;
}

